# protocol

./: .gitignore  README.md
DDEX-validation/: .gitignore  README.md  hardhat.config.ts  package.json  tsconfig.json
DDEX_messages/: DSR_example.xml  ERN_NewReleaseMessage_example.xml  ERN_PurgeReleaseMessage_example.xml  ERN_TakedownMessage_example.xml  ERN_Takedownmessage_example.xml  ERN_UpdateReleaseMessage_example.xml  ERN_UpdateReleaseMessage_register_deals.xml  ERN_example.xml  MWN_example.xml  README.md  check_ERN.py
contracts/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
docker/: graph-node-config.toml  run-local.yml  test-ow_data_provider_cli.yml
graph/: README.md  package-lock.json  package.json
meetings/: 2024-07-03.md  2024-07-10.md
ow-registry-subgraph/: .gitignore  package-lock.json  package.json  schema.graphql  subgraph.yaml
ow_blob_codec/: .gitignore  Cargo.toml  README.md
ow_data_provider_cli/: .env.example  .gitignore  Cargo.toml  README.md
ow_data_provider_cli/src/: blob.rs  constants.rs  ddex_sequencer.rs  errors.rs  ipfs.rs  lib.rs  main.rs
ow_data_provider_cli/tests/asset_one/: test.xml
ow_data_provider_cli/tests/asset_two/: name.xml  random-image.avif
ow_data_provider_cli/tests/wrong_files/: text_file.txt
ow_validator_node/: .env.template  .gitignore  Cargo.toml  README.md
ow_validator_node/src/: beacon_chain.rs  circuit_mock.rs  constants.rs  ddex_sequencer.rs  errors.rs  ipfs.rs  lib.rs  main.rs
xsd/: MWN.xsd  README.md  deals01.xsd  index.html
zk-dapp-poc/: README.md  bun.lockb  (+1 more)
(+146 files in other folders)
