[package]
name = "ow_data_provider_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["stream", "multipart", "json"] }
alloy = { version = "0.3.6", features = ["full"] }
c-kzg = "1.0.3"
dotenvy = "0.15.7"
ow_blob_codec = "0.1.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
serde = "1.0.210"
infer = "0.16.0"
quick-xml = "0.36.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }
